assets/css/ui.css
/*************************
  Basic
*************************/

* {
  line-height: 1.5;
  letter-spacing: 0.14rem;
  word-spacing: 0.16rem;
}

html,
body {
  font-size: var(--font-size-base, 1rem);
  font-family: var(--font-family);
  scroll-behavior: smooth;
}

.wrapper {
  color: oklch(var(--wrapper-color));
  overflow-x: hidden;
  /* background: color image attachment repeat poition / size */
  background: oklch(var(--wrapper-bg)) url('/images/sitename.svg') fixed no-repeat center
    bottom 10% / contain;
  @media (prefers-color-scheme: dark) {
      background-image: url('/images/sitename-dark.svg');
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: bold;
  text-transform: capitalize;
  color: oklch(var(--title-color));
}

h1 {
  font-size: clamp(2rem, calc(100cqw / 40), 4rem);
  margin-bottom: 1.5rem;
}

h2 {
  font-size: clamp(1.5rem, calc(100cqw / 40), 3rem);
  margin-bottom: 1.5rem;
}

h3 {
  font-size: clamp(1.25rem, calc(100cqw / 40), 2rem);
  margin-bottom: 1rem;
}

h4 {
  font-size: 1rem;
  margin-bottom: 1rem;
}

h5 {
  font-size: 0.875rem;
  margin-bottom: 1rem;
}

h6 {
  font-size: 0.75rem;
  margin-bottom: 1rem;
}

a {
  color: oklch(var(--link-color));
  transition: opacity 160ms ease-in;
  text-decoration: underline;
  text-decoration-skip-ink: auto;
  &:hover {
    opacity: 0.6;
  }
  &:active {
    opacity: 1;
  }
  &:focus {
    outline: none;
    box-shadow: 0 0 0 3px oklch(var(--outline-color));
  }
  &:visited {
    color: oklch(var(--color-visited));
  }
  &[role="button"] {
    text-decoration: none;
  }
}

a[role="button"] {
  background-color: oklch(var(--color-primary));
  padding: 0.5rem;
  color: oklch(var(--color-white));
  & svg path {
    fill: oklch(var(--color-white));
  }
  &[aria-current="page"] {
    box-shadow: 0 0 0 3px oklch(var(--outline-color));
  }
}

p {
  max-width: 80ch;
  margin-bottom: 2rem;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  word-break: break-word;
}

select {
  cursor: pointer;
  border: 1px solid oklch(var(--border-color));
  padding: 0.25rem 1.5rem 0.5rem 0.25rem;
  border-radius: 0.25rem;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 448 512'><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d='M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z'/></svg>");
  background-repeat: no-repeat;
  background-position: right 0.5rem center;
  &:focus {
    box-shadow: 0 0 0 3px oklch(var(--outline-color));
  }
}

table {
  border-top: 1px solid oklch(var(--border-color));
  border-left: 1px solid oklch(var(--border-color));
  width: 100%;
  background-color: oklab(var(--table-bg));
  & th {
    padding: 0.5rem 1rem;
    font-weight: bold;
    border-right: 1px solid oklch(var(--border-color));
    background-color: oklch(var(--color-primary-modified));
    word-break: break-word;
    @media screen and (width <= 768px) {
      padding: 0.25rem 0.5rem;
    }
  }
  & tr {
    border-bottom: 1px solid oklch(var(--border-color));
  }
  & td {
    border-right: 1px solid oklch(var(--border-color));
    padding: 0.5rem 1rem;
    word-break: break-word;
    @media screen and (width <= 768px) {
      padding: 0.25rem 0.5rem;
    }
  }
}

kbd {
  display: inline-block;
  vertical-align: top;
  margin: 0 0.125rem 0.5rem;
  border: 1px solid oklch(var(--border-color));
  padding: 0 0.5rem;
  border-radius: 0.25rem;
  box-shadow: 0 0.25rem 0.5rem oklch(var(--color-black) / 0.15);
  font-family: var(--font-family);
  /* background-color: oklch(var(--color-white)); */
}

article {
  & figure {
    margin-bottom: 2rem;
  }
  & img {
    width: 100%;
    max-width: 100%;
    height: auto;
    box-shadow: var(--box-shadow);
  }
}

section {
  margin-bottom: 1.5rem;
}

figcaption {
  display: block;
  text-align: center;
  font-size: 0.875rem;
  max-width: 80ch;
  margin: 0.5rem auto;
  text-wrap: balance;
}


/*************************
  Layout
*************************/

.layout {
  min-height: 100dvh;
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 100%;
}

/*************************
  Page
*************************/

[class^="btn"] {
  background-color: oklch(var(--color-primary));
  color: oklch(var(--color-white));
  padding: 0.75rem 1.25rem;
  border-radius: 2rem;
  &:hover {
    background-color: oklch(var(--color-primary) / 80%);
  }
  &:focus-within {
    box-shadow: 0 0 0 4px oklch(var(--outline-color));
  }
}

[id^='ak-'] {
  text-decoration: none;
}

#ak-jump {
  position: absolute;
  top: -1px;
  left: 0;
  font-size: 0.875rem;
  color: transparent;
  z-index: -1;
  &:focus-within {
    color: oklab(var(--skip-btn-color, var(--skip-btn-color-default)));
    background-color: oklab(var(--skip-btn-bg, var(--skip-btn-bg--default)));
    z-index: inherit;
  }
}

.noscript {
  position: fixed;
  top: 1rem;
  left: calc(50% - 150px);
  width: 300px;
  background-color: oklch(var(--color-white));
  border-radius: 0.25rem;
  color: var(--color-black);
  padding: 1rem;
  box-shadow: 0 0.25rem 1rem oklch(var(--color-black) / 12%);
  z-index: 9999;
}

.loading {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 100;
  & .loading-container {
    position: relative;
    width: 100%;
    margin: 0 auto;
    text-align: center;
    @media screen and (width <= 768px) {
      padding-left: 10%;
      padding-right: 10%;
    }
  }
  & .loader {
    border: 1rem solid oklch(var(--color-white));
    box-shadow: 0.25rem 0.25rem 2rem oklch(var(--color-black) / 15%),
      inset 0 0.25rem 1rem oklch(var(--color-black) / 15%);
    border-radius: 50%;
    border-top: 1rem solid oklch(var(--color-primary));
    width: 4rem;
    height: 4rem;
    margin: 0 auto;
    animation: spin 2s linear infinite;
  }
}

.lang-switcher {
}

.flex-list {
  display: flex;
  gap: 2rem;
  flex-wrap: wrap;
  margin-bottom: 2rem;
  /* &>div {
    max-width: 80ch;
  } */
  & .flex-list-title {
    font-size: 1.125rem;
    font-weight: bold;
  }
  & ol {
    list-style-type: decimal;
    margin: 1em;
    padding: 1em;
    & li {
      padding: 0.25rem 0;
    }
  }
  & ul {
    list-style-type: disc;
    padding: 0 1em 1em 1em;
    & li {
      padding: 0.25rem 0;
    }
  }
}

.page {
  width: 100%;
  max-width: var(--breakpoint-1600);
  margin: 0 auto;
  padding: 0;
  display: flex;
  justify-content: center;
  @media screen and (width <= 768px) {
    padding: 1rem;
  }
  &.page--index {
    & .page-aside {
      width: 60ch;
      max-width: var(--breakpoint-768);
      padding-right: 0;
      position: inherit;
      transform: translate3d(0, 0, 0);
      box-shadow: none;
      background-color: transparent;
      & .port-list-blcok {
        position: initial;
        top: initial;
        overflow: inherit;
        max-height: inherit;
        padding-right: 0;
        padding-left: 0;
      }
    }
    & .page-container {
      flex: initial;
    }
  }
}

.page-aside {
  width: 40ch;
  max-width: var(--breakpoint-375);
  @media screen and (width <= 768px) {
    position: fixed;
    top: 0;
    left: 0;
    width: 35ch;
    height: 100dvh;
    z-index: 1;
    background-color: oklch(var(--menubar-mobile-bg));
    box-shadow: var(--box-shadow);
    transform: translate3d(-100%, 0, 0);
    transition: transform 300ms ease-in;
    &.page-aside--open {
      transform: translate3d(0, 0, 0);
    }
  }
  & .btn-close-mobile-menu {
    display: none;
    box-shadow: var(--box-shadow);
    &:focus-within {
      box-shadow: var(--box-shadow), 0 0 0 4px oklch(var(--outline-color));
    }
    @media screen and (width <= 768px) {
      display: block;
      position: absolute;
      bottom: 2rem;
      left: 50%;
      transform: translate3d(-50%, 0, 0);
      z-index: 1;
    }
  }
}

.page-container {
  flex: 1;
  padding: 2rem;
  @media screen and (width <= 768px) {
    padding: 0;
  }
}

.btn-open-mobile-menu {
  display: none;
  position: sticky;
  top: 1rem;
  @media screen and (width <= 768px) {
    display: block;
  }
}

.port-list-blcok {
  position: sticky;
  top: 0;
  overflow: auto;
  overscroll-behavior: contain;
  max-height: 100dvh;
  padding: 2rem;
  @media screen and (width <= 768px) {
    padding: 1rem;
  }
  & li {
    margin-bottom: 1rem;
  }
}

.page-enter-active,
.page-leave-active {
  transition: all 0.2s;
}

.page-enter-from,
.page-leave-to {
  opacity: 0.7;
}

